--- a/hosts/eshop.conf
+++ b/hosts/eshop.conf
@@ -1,9 +1,9 @@
 server {
     index index.php index.html;
-    server_name eshop.local;
-    error_log  /var/log/nginx/eshop.local.log;
-    access_log /var/log/nginx/eshop.local.log;
-    root /var/www/eshop.local;
+    server_name eshop.my;
+    error_log  /var/log/nginx/eshop.my.log;
+    access_log /var/log/nginx/eshop.my.log;
+    root /var/www/eshop.my;
     
     location ~ \.php$ {
         try_files $uri =404;
